# rubber-duck

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  REUSE.toml  duck-claude.sh  duck-shell.sh  entrypoint.sh  fly.toml  pyproject.toml  state
.beads/: beads.db  beads.db-shm  issues.jsonl
.devcontainer/: devcontainer.json
archive/letta-sandbox-tools/: end_of_day_review.py  get_completed_tasks.py  letta_tools.py  query_todoist.py  update_todoist_project.py  update_todoist_task.py
config/: nudges.yaml  nudges.yaml.example
docs/: brainstorm-context.md  environment.md  gcal-setup.md  setup-progress.md
docs/beads/: calendar-integration.md  future-co-integration.md  marvin-to-todoist-migration.md  personality-tuning.md
docs/notes/: 2025-12-27-gtd-implementation-questions.md
docs/plans/: 2025-12-25-rubber-duck-design.md  2025-12-27-agent-integration.md  2025-12-29-natural-language-task-capture-design.md  2025-12-31-strix-architecture-design.md  2025-12-31-strix-implementation-plan.md  2026-01-01-interactive-agent-progress.md  2026-01-01-wellness-lessons.md  2026-01-02-perch-ticks-design.md  2026-01-02-project-metadata-design.md  2026-01-02-project-metadata-implementation.md  2026-01-02-weekly-review-implementation.md  2026-01-02-weekly-review-redesign.md  2026-01-03-claude-code-refactor-design.md  2026-01-03-claude-code-refactor-impl.md  2026-01-03-preemption-design.md  2026-01-03-preemption-implementation.md  (+2 more)
scripts/: debug_letta_agent.py  migrate_marvin_to_todoist.py  test_agent.py
state/: inbox.md  today.md
tests/: test_claude_code.py  test_cli_tools.py  test_gtd_calendar.py  test_gtd_deadlines.py  test_gtd_projects.py  test_gtd_someday.py  test_gtd_waiting.py  test_integration_claude_code.py  test_preemption.py  test_project_metadata.py  test_weekly_conductor.py
(+58 files in other folders)
